--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         work correctly both with client-side routing and a non-root public URL.
         Learn how to configure a non-root public URL by running `npm run build`.
         -->
-    <title>Light Bootstrap Dashboard - React</title>
+    <title>LeMedic</title>
 
     <link
       href="//maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
